# air-quality-box

./: .gitignore  .gitmodules  README.md  sdkconfig  sdkconfig.old
cad/: mnii_air_quality_box.step
components/u8g2-hal-esp-idf/include/: u8g2_esp32_hal.h
components/u8g2-hal-esp-idf/src/: u8g2_esp32_hal.c
main/: CMakeLists.txt  Config.h  Devices.c  Devices.h  Display.c  Display.h  Menu.c  Menu.h  Rotary.c  Rotary.h  Storage.c  System.c  System.h  View.c  View.h  main.c
main/include/: Config.h  Devices.h  Display.h  ErrorLog.h  Menu.h  Rotary.h  System.h  View.h
src/: CMakeLists.txt
src/main/: CMakeLists.txt  ErrorLog.c  Storage.c  main.c
src/main/include/: Menu.h  Rotary.h  Storage.h
